kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: my-cicd-project
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
